--- a/python/simpleAcO_for_WFPT_eval.ipynb
+++ b/python/simpleAcO_for_WFPT_eval.ipynb
@@ -115,6 +115,7 @@
     "\n",
     "# WFS\n",
     "wfs_nLenslet = 48\n",
+    "# dictionary\n",
     "wfs_prms = {'N_SIDE_LENSLET':wfs_nLenslet, \"N_PX_LENSLET\":16,\n",
     "            'd':pupil_size/wfs_nLenslet, 'DFT_osf':2, 'N_PX_IMAGE':24,\n",
     "            'BIN_IMAGE':3, 'N_GS':3, 'readOutNoiseRms':0.5, 'noiseFactor':np.sqrt(2),\n",
@@ -130,6 +131,26 @@
     "                   'magnitude':[0]*3,   #SUPER BRIGHT!\n",
     "                   'fwhm':3.16, 'rays_box_size':pupil_size,\n",
     "                   'rays_box_sampling': nPx,'rays_origin':[0,0,25]}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wfs_prms['DFT_osf']"
    ]
   },
   {
@@ -176,7 +197,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f9660300f10>"
+       "<matplotlib.image.AxesImage at 0x7f84389a1d90>"
       ]
      },
      "execution_count": 6,
@@ -472,7 +493,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9660148910>"
+       "<matplotlib.legend.Legend at 0x7f84317ce850>"
       ]
      },
      "execution_count": 14,
@@ -680,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1096,16 +1117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9644648d90>]"
+       "[<matplotlib.lines.Line2D at 0x7f84306a79a0>]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1130,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1269,7 @@
        "<Figure size 864x648 with 7 Axes>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1279,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1564,20 +1585,13 @@
     "ax2.tick_params(labelsize=12)\n",
     "ax2.grid()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('ceo': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3810jvsc74a57bd0e9e706394c2d93726d8fe2b9644d291aeef68f1b3927d2926367d06ba3f9697c"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
